updated button CSS to fix animation overflow issues

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     background-color: rgb(212, 201, 201);
-    
+    overflow: auto;
 }
 
 header {
@@ -13,9 +13,15 @@ font-size: 36px;
 }
 footer {
     position: absolute;
-    bottom: 0px;
-    text-align: center;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
     width: 100%;
+    padding: 10px;
+    font-size: 20px;
 
 }
 
@@ -53,13 +59,20 @@ float: left;
     border: 1px solid;
     border-radius: 5px;
     cursor: pointer;
+    width: 50%;
+    height: 25%;
+    margin: 10px;
+ }
+ button:hover {
+    transform: scale(1.05);
  }
 .buttonDiv {
    position: absolute;
     display: flex;
     flex-direction: column;
-    width: 10%;
-    margin-left: 15px;
+    width: 20%;
+    height: 25%;
+    margin: 10px;
     gap: 15px;
 }
 .sizeBtn {
